[package]
name = "cyber-nutrition-facts"
version = "0.1.0"
edition = "2024"

[dependencies]

# Parses command-line arguments into data structures
clap = { version = "4", features = ["derive"] }

# Parses uris
uris = "0.1"

# Looks up full .exe paths given program names; used to identify missing software.
which = "8"

# Performs automated PDF generation
printpdf = "0.4"

# Used to determine file types from magic bytes. This embeds the same Magic & MIMEs used by https://tika.apache.org/
tika-magic = "0.2"

# Used to identify source languages to pass Inputs to analysis routines
#hyperpolyglot = { git = "https://github.com/monkslc/hyperpolyglot.git" }
hyperpolyglot = "0.1"

